--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ highlighter: 'pygments'
 #paginate: 8
 permalink: /:title
 
-title: Hyper Hamster
-url: http://mukosame.github.io
+title: Yiling Xu
+url: http://yilingxu.github.io
 feed: /atom.xml
-author_info: <a href="http://mukosame.github.io/">Mukosame</a>
+author_info: <a href="http://yilingxu.github.io/">Yiling Xu</a>
